# AI-Learning-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: chat.py  health.py  progress.py  project.py  roadmap.py
app/core/: config.py  exceptions.py  logging.py
app/db/: base.py  session.py
app/models/: __init__.py  chat.py  progress.py  project.py  roadmap.py
app/prompts/: chat.py  project.py  roadmap.py
app/repositories/: chat.py  progress.py  project.py  roadmap.py
app/schemas/: chat.py  common.py  health.py  progress.py  project.py  roadmap.py
app/services/: cache.py  chat.py  chunking.py  gemini.py  health.py  progress.py  project.py  roadmap.py
app/utils/: json.py  markdown.py
tests/integration/: test_openapi.py
tests/unit/: test_gemini_retry.py  test_json_utils.py  test_markdown.py  test_schemas.py
