[tool.poetry]
name = "ai-learning-assistant"
version = "0.1.0"
description = "Production-ready AI Learning Assistant backend for the Get Set Skilled assignment"
authors = ["AI Learning Assistant Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pgvector = "^0.3.6"
google-genai = "^0.6.0"
redis = "^5.2.1"
langchain-text-splitters = "^0.3.5"
tenacity = "^9.0.0"
loguru = "^0.7.3"
orjson = "^3.10.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"
ruff = "^0.8.4"
black = "^24.10.0"
mypy = "^1.14.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
